--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ fastapi = "^0.115.4"
 pydantic = "^2.9.2"
 pydantic-settings = "^2.6.0"
 psycopg2-binary = "^2.9.10"
+alembic = "^1.13.3"
+asyncpg = "^0.30.0"
 
 
 [build-system]
