--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydantic-settings = "^2.6.0"
 psycopg2-binary = "^2.9.10"
 alembic = "^1.13.3"
 asyncpg = "^0.30.0"
+requests = "^2.32.3"
 
 
 [build-system]
