--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ psycopg2-binary = "^2.9.10"
 alembic = "^1.13.3"
 asyncpg = "^0.30.0"
 requests = "^2.32.3"
+pyjwt = "^2.9.0"
+pytest-asyncio = "^0.24.0"
 
 
 [build-system]
