--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,32 @@ requests = "^2.32.3"
 pyjwt = "^2.9.0"
 pytest-asyncio = "^0.24.0"
 uvicorn = "^0.32.0"
+pytest = "^8.3.3"
+pytest-cov = "^5.0.0"
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q"
+testpaths = [
+    "tests",
+]
+
+[tool.coverage.run]
+source = ["app"]
+omit = ["tests/*"]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "def __repr__",
+    "if self.debug:",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
+    "pass",
+    "raise ImportError",
+]
